--- a/Accounting/Templates/Accounting/admin-finance.html
+++ b/Accounting/Templates/Accounting/admin-finance.html
@@ -155,7 +155,7 @@
                                     </a>
 
                                     <!-- payslip button -->
-                                    <a href="{% url 'payslip' pk=employee.id %}" class="text-decoration-none">
+                                    <a href="{% url 'payslip-view' pk=employee.id %}" class="text-decoration-none">
                                         <button type="button" class="button-light">
                                             <svg xmlns="http://www.w3.org/2000/svg" fill="#E85C0D" class="bi bi-layers" viewBox="0 0 16 16" stroke="#E85C0D" stroke-width="0.5">
                                                 <path d="M8.235 1.559a.5.5 0 0 0-.47 0l-7.5 4a.5.5 0 0 0 0 .882L3.188 8 .264 9.559a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882L12.813 8l2.922-1.559a.5.5 0 0 0 0-.882zm3.515 7.008L14.438 10 8 13.433 1.562 10 4.25 8.567l3.515 1.874a.5.5 0 0 0 .47 0zM8 9.433 1.562 6 8 2.567 14.438 6z"/>
